# turkish_validator

./: .gitignore  .pre-commit-config.yaml  .style.yapf  LICENSE.MD  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
tests/: test_tax_number.py  test_turkish_id_number.py
turkish_validator/: __init__.py  tr_validator.py  turkish_validator.py
